# Fastapi-learn

./: .gitignore  .pre-commit-config.yaml  alembic.ini  pyproject.toml
alembic/versions/: 9ceadb3a2ab2_create_user_table_properly.py  a01815fcc1f0_added_firstname_and_lastname.py  e452717422b1_making_nullable_fields.py  eb8335af5d87_updating_user_id_in_posts_new.py  ecaad879b48b_updating_user_id_in_posts.py  ee12e2b9d49c_created_posts_table.py
app/: logger.py  main.py  utils.py
app/db/: database.py
app/models/: __init__.py  posts.py  user.py
app/routers/: auth.py  posts.py  user.py
app/schema/: auth.py  posts.py  user.py
